# zyflow

./: .env.production.template  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  TAG-005-IMPLEMENTATION.md  TAGS-IMPLEMENTATION-LOG.md  docker-compose.yml  ecosystem.config.cjs  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.mcp.json  vite.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.zywiki/: config.json  metadata.json
backlog/: task-001-test-backlog-feature.md  task-002-openspec-deferred.md
config/: ports.ts
docs/: PORT_CONFIGURATION.md  api.md  claude-sdk-guide.md  error-codes-reference.md  error-handling-guide.md  error-monitoring-guide.md  error-recovery-patterns.md  error-testing-guide.md  local-settings.md  mcp-tools.md  multi-provider-implementation.md  phase4-claude-flow-removal.md  phase4-migration-complete.md  roadmap.md  zywiki-roadmap.md
mcp-server/: agent-tools.ts  cli-models.ts  context.ts  diagram-tools.ts  (+14 more)
py-agents/: README.md  pyproject.toml
py-agents/src/zyflow_agents/: __init__.py  agent.py  execution.py  graph.py  openspec_parser.py  server.py  zyflow_sync.py
py-agents/src/zyflow_agents/middleware/: __init__.py  openspec.py
py-agents/src/zyflow_agents/tools/: __init__.py
py-agents/src/zyflow_agents/utils/: __init__.py
py-agents/tests/: __init__.py  test_agent.py  test_execution.py  test_middleware.py  test_openspec_parser.py  test_server.py
(+1050 files in other folders)
